--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Footer from '../components/Footer.astro';
 <Layout title="Servicio Tecnico MDEO">
 	<main class="px-4">
 		<section class="w-full md:w-[730px] pt-2 mx-auto py-44 flex flex-col items-center">
-			<h1 class="font-bold text-5xl text-blue-300">Bienvenidos</h1>
+			<h1 class="font-bold text-4xl text-blue-300">Bienvenidos</h1>
 	
 			<img class="rounded-full m-4 h-[200px] w-[200px] md:h-[200px] md:w-[200px]" src="/magoresonanteblanco.jpg" alt="logo-mago">
 			<Code></Code>
@@ -26,13 +26,13 @@ import Footer from '../components/Footer.astro';
 			</div>
 			
 			<nav class="flex gap-x-4 mt-8">
-				<Social href="">
+				<Social href="https://wa.me/3405433121">
 					<Whatsapp class="size-6" ></Whatsapp>
 				</Social>
 				<Social href="https://github.com/Emedeo22">
 					<Git class="size-6"></Git>
 				</Social>
-				<Social href="">
+				<Social href="https://www.linkedin.com/in/nicolas-m-de-oca/">
 					<LinkedIn class="size-6"></LinkedIn>
 				</Social>
 			</nav>
@@ -60,7 +60,6 @@ import Footer from '../components/Footer.astro';
 </Layout>
 
 <style>
-	
 	h2 { 
 		font-size: 2rem;
 		font-weight: 700;
