--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,8 @@
    <span></span>
 
     <nav class="flex flex-row gap-x-10 opacity-50"> 
-        <a  href="/Home">Inicio</a>
-        <a href="/About">Quienes somos?</a>
-        <a href="/Contact">Contacto</a>
+        <a  href="/Home"></a>
+        <a href="/About"></a>
+        <a href="/Contact"></a>
     </nav>
 </header>
